New images + Adjust Skill Card

--- a/app/globals.css
+++ b/app/globals.css
@@ -12,3 +12,7 @@
     background-size: 550px 550px, 350px 350px, 250px 250px, 150px 150px;
     background-position: 0 0, 40px 60px, 130px 270px, 70px 100px;
 }
+
+.ufoBeam {
+    background-image: linear-gradient(to bottom, rgba(107, 33, 168, 0.8) 35%, rgba(96, 165, 250, 0.4) 100%);
+}
